# authz-authn-primer

./: .env-template  Containerfile  README.md  docker-compose.yaml
oauth2-proxy/: config.cfg
python-simple-auth/: Containerfile  main.py  pyproject.toml
python-simple-auth/templates/: index.html
